# algoritmos-curiosos

./: .gitignore  README.md  pyproject.toml
demos/bogosort/: main.py
demos/fast_inverse_square_root/: main.py
demos/floyd_cycle/: main.py
demos/maze_generation/: main.py
demos/sleep_sort/: main.py
src/algoritmos_curiosos/: common.py  launcher.py
src/algoritmos_curiosos/bogosort/: __init__.py  logic.py  main.py
src/algoritmos_curiosos/fast_inverse_sqrt/: __init__.py  logic.py  main.py
src/algoritmos_curiosos/floyd_cycle/: __init__.py  logic.py  main.py
src/algoritmos_curiosos/maze_generation/: __init__.py  logic.py  main.py
src/algoritmos_curiosos/sleep_sort/: __init__.py  logic.py  main.py
tests/: test_algorithms.py
